<resources>

    <string name="app_name">KhlynovApp</string>
    <string name="app_title">Поиск музыкальных\nисполнителей</string>
    <string name="service_info">Сервис позволяет найти лучшие треки исполнителей и показывает\nбиографию</string>
    <string name="artist_biography_button">Биография артиста</string>
    <string name="best_tracks_button">Лучшие треки</string>
    <string name="artist_image">Изображение артиста</string>

    <string name="biography_title">Биография</string>
    <string name="search_field_text">Кого ищем?</string>
    <string name="search_button">Искать</string>
    <string name="back_button">Вернуться назад</string>
    <string name="ic_magnifying_glass_image">Изображение лупы</string>

    <string name="top_track_title">Лучшие треки</string>
    <string name="input_artist_name">Введите артиста</string>

    <string name="track_field_base_text">Поле не найдено</string>

</resources>