<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Заголовок главного экрана. -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="#000000"
        android:textSize="29sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="start"
        android:maxLines="2"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Линия под заголовком. -->
    <View
        android:id="@+id/underlineView"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@drawable/line_gradient"
        android:layout_marginTop="21dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="@id/titleTextView"/>

    <!-- Общная информация о приложении. -->
    <TextView
        android:id="@+id/serviceInfoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/service_info"
        android:textColor="#7B7B7B"
        android:textSize="16sp"
        android:maxLines="3"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/underlineView"
        app:layout_constraintStart_toStartOf="@id/underlineView"
        app:layout_constraintEnd_toEndOf="@id/underlineView" />

    <!-- Изображение. -->
    <ImageView
        android:id="@+id/sampleImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/artist"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/artist_image"
        app:layout_constraintTop_toBottomOf="@+id/serviceInfoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка перехода на поиск биографии артиста. -->
    <Button
        android:id="@+id/biographyButton"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:text="@string/artist_biography_button"
        android:textSize="16sp"
        android:textColor="#303030"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/first_button_gradient"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/sampleImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка просмотра лучших треков артиста. -->
    <Button
        android:id="@+id/tracksButton"
        android:layout_width="288dp"
        android:layout_height="55dp"
        android:text="@string/best_tracks_button"
        android:textSize="16sp"
        android:textColor="#303030"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/second_button_gradient"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/biographyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>