<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchTopTrackActivity">

    <!-- Заголовок поиска лучших треков -->
    <TextView
        android:id="@+id/topTracksTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="36dp"
        android:gravity="start"
        android:text="@string/top_track_title"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <!-- Изображение лупы -->
    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="12dp"
        android:layout_height="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="57dp"
        android:src="@drawable/ic_magnifying_glass"
        android:contentDescription="@string/ic_magnifying_glass_image"
        app:layout_constraintTop_toBottomOf="@+id/topTracksTitleTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Поле ввода артиста-->
    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="36dp"
        android:textSize="15sp"
        android:hint="@string/search_field_text"
        android:textColorHint="#000000"
        android:background="@null"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topTracksTitleTextView" />

    <!-- Линия под поисков ввода артиста -->
    <View
        android:id="@+id/underlineView"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@drawable/line_gradient"
        android:layout_marginTop="6dp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="@+id/searchIcon"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <!-- Кнопка поиска треков -->
    <Button
        android:id="@+id/topTrackButton"
        android:layout_width="156dp"
        android:layout_height="55dp"
        android:text="@string/search_button"
        android:textSize="16sp"
        android:textColor="#303030"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/first_button_gradient"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/underlineView"
        app:layout_constraintStart_toStartOf="@+id/underlineView"
        app:layout_constraintEnd_toEndOf="@+id/underlineView" />

    <!-- Список треков -->
    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_height="410dp"
        android:layout_width="0dp"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@id/topTrackButton"
        app:layout_constraintStart_toStartOf="@id/topTracksTitleTextView"
        app:layout_constraintEnd_toEndOf="@id/topTracksTitleTextView">

        <LinearLayout
            android:id="@+id/tracksContainer"
            android:paddingHorizontal="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp" />

    </ScrollView>

    <!-- Поле возврата назад -->
    <TextView
        android:id="@+id/backTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/back_button"
        android:textSize="16sp"
        android:textColor="#000000"
        android:autofillHints=""
        app:layout_constraintTop_toBottomOf="@id/scrollContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Линия под полем возврата -->
    <View
        android:id="@+id/secondUnderlineView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/backTextView"
        app:layout_constraintStart_toStartOf="@id/backTextView"
        app:layout_constraintEnd_toEndOf="@id/backTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
